--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,29 @@
-# large files
+# kc added
 docs/assets/wc10/
+*.xlsx
 *.gri
 *.grd
 *.vrt
 docs/assets/GADM*
-
-
-#
 *.pdf
 outputs
-mapsR_file
+mapsR_files
 
 # History files
 .Rhistory
 .Rapp.history
 
+# Session Data files
+.RData
+
 # Example code in package build process
 *-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
 
 # RStudio files
 .Rproj.user/
@@ -24,3 +31,14 @@ mapsR_file
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+/*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
